...
            }
        }];
    }
}

-(void)emptyAlert {
    UIAlertController *alert = [UIAlertController alertControllerWithTitle:@"Error" message:@"fill out required fields"
        preferredStyle:(UIAlertControllerStyleAlert)];
    UIAlertAction *cancelAction = [UIAlertAction actionWithTitle:@"Cancel"
    style:UIAlertActionStyleCancel handler:^(UIAlertAction * _Nonnull action) {

    }];
    [alert addAction:cancelAction];
...
